# Daemon

app/: CMakeLists.txt  build.gradle
app/doc/: doc.md
app/src/androidTest/java/com/erlei/keepalive/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/daemon/arm64-v8a/: daemon
app/src/main/java/com/erlei/keepalive/: MainActivity.java  NativeDaemon.java
app/src/main/jni/: daemon.c  daemon.h  log.h  native_daemon.c
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/erlei/keepalive/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
